Implement #125 skin offset dialog
"File -> Apply Overall Skin Transform" menu item removed.

--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -197,6 +197,7 @@
     <ResourceCompile Include="BodySlide.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="lang\BodySlide.pot" />
     <None Include="lib\gli\core\clear.inl" />
     <None Include="lib\gli\core\comparison.inl" />
     <None Include="lib\gli\core\convert.inl" />
