--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -107,15 +107,6 @@
     <None Include="res\xrc\BatchBuild.xrc">
       <Filter>Resources</Filter>
     </None>
-    <None Include="res\shaders\mask.vert">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="res\shaders\skin.frag">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="res\shaders\default.frag">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="lib\SOIL2\SOIL2_x64_d.pdb">
       <Filter>Libraries\SOIL2</Filter>
     </None>
@@ -581,17 +572,29 @@
     <None Include="lib\gli\core\view.inl">
       <Filter>Libraries\gli\core</Filter>
     </None>
-    <None Include="res\shaders\primitive.frag">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="res\shaders\primitive.vert">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="res\xrc\Setup.xrc">
       <Filter>Resources</Filter>
     </None>
     <None Include="lang\BodySlide.pot">
       <Filter>Resources</Filter>
+    </None>
+    <None Include="res\shaders\default.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="res\shaders\default.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="res\shaders\fo4_default.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="res\shaders\fo4_default.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="res\shaders\primitive.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="res\shaders\primitive.vert">
+      <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
