--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -347,6 +347,10 @@
     <None Include="res\shaders\default.vert" />
     <None Include="res\shaders\fo4_default.frag" />
     <None Include="res\shaders\fo4_default.vert" />
+    <None Include="res\shaders\fullscreentri.frag" />
+    <None Include="res\shaders\fullscreentri.vert" />
+    <None Include="res\shaders\normalshade.frag" />
+    <None Include="res\shaders\normalshade.vert" />
     <None Include="res\shaders\primitive.frag" />
     <None Include="res\shaders\primitive.vert" />
     <None Include="res\xrc\About.xrc" />
@@ -589,6 +593,7 @@
     <ClInclude Include="src\program\PreviewWindow.h" />
     <ClInclude Include="src\program\ShapeProperties.h" />
     <ClInclude Include="src\render\GLExtensions.h" />
+    <ClInclude Include="src\render\GLMaterial.h" />
     <ClInclude Include="src\render\GLShader.h" />
     <ClInclude Include="src\render\GLSurface.h" />
     <ClInclude Include="src\ui\wxStateButton.h" />
@@ -634,6 +639,7 @@
     <ClCompile Include="src\program\PreviewWindow.cpp" />
     <ClCompile Include="src\program\ShapeProperties.cpp" />
     <ClCompile Include="src\render\GLExtensions.cpp" />
+    <ClCompile Include="src\render\GLMaterial.cpp" />
     <ClCompile Include="src\render\GLShader.cpp" />
     <ClCompile Include="src\render\GLSurface.cpp" />
     <ClCompile Include="src\ui\wxStateButton.cpp" />
