--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -1285,6 +1285,12 @@
     <ClInclude Include="src\render\GLOffscreenBuffer.h">
       <Filter>Rendering</Filter>
     </ClInclude>
+    <ClInclude Include="src\program\baseNormalsOptDlg.h">
+      <Filter>Program</Filter>
+    </ClInclude>
+    <ClInclude Include="src\program\NormalsGenDialog.h">
+      <Filter>Program</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lib\TinyXML-2\tinyxml2.cpp">
@@ -1418,6 +1424,12 @@
     </ClCompile>
     <ClCompile Include="src\render\GLOffscreenBuffer.cpp">
       <Filter>Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="src\program\baseNormalsOptDlg.cpp">
+      <Filter>Program</Filter>
+    </ClCompile>
+    <ClCompile Include="src\program\NormalsGenDialog.cpp">
+      <Filter>Program</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
